# rtiaw

./: .gitignore  meson.build
benchmarks/: spherical_pt_sampling.cpp
include/: camera.h  color.h  common.h  constant.h  hittable.h  hittable_list.h  material.h  matrix.h  meson.build  random.h  ray.h  sphere.h  vector.h
src/: main.cpp  material.cpp  meson.build  sphere.cpp
